force-app/main/default/objects/Additional_Income__c/Additional_Income__c.object-meta.xml
<CustomObject>
    <description>Child object of the Case object</description>
    <label>Additional Income</label>
    <nameField>
        <displayFormat>IN-{00000}</displayFormat>
        <label>Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>