force-app/main/default/objects/Additional_Income__c/fields/Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer__c</fullName>
    <label>Current Employer</label>
    <type>TextArea</type>
</CustomField>