force-app/main/default/objects/Additional_Income__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>