force-app/main/default/objects/Additional_Income__c/fields/Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Income_Amount__c</fullName>
    <label>Income Amount</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>