force-app/main/default/objects/Additional_Income__c/fields/Income_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Amount_Type__c</fullName>
    <label>Income Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>