force-app/main/default/objects/Additional_Income__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rental Income</fullName>
            </value>
            <value>
                <fullName>Single Parenting</fullName>
            </value>
            <value>
                <fullName>Child Support (CSA)</fullName>
            </value>
            <value>
                <fullName>Investment Income (e.g., shares)</fullName>
            </value>
            <value>
                <fullName>Centrelink Family Benefits</fullName>
            </value>
            <value>
                <fullName>Centrelink Carers Payments</fullName>
            </value>
            <value>
                <fullName>Centrelink Disability Payments</fullName>
            </value>
            <value>
                <fullName>Centrelink Pension</fullName>
            </value>
            <value>
                <fullName>Centrelink Newstart</fullName>
            </value>
            <value>
                <fullName>Centrelink Other</fullName>
            </value>
            <value>
                <fullName>Austudy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Additional Job</fullName>
            </value>
            <value>
                <fullName>Commissions and bonuses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>