force-app/main/default/objects/Additional_Income__c/fields/Partner_Income__c.field-meta.xml
<CustomField>
    <fullName>Partner_Income__c</fullName>
    <label>Partner Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>