force-app/main/default/objects/Additional_Income__c/fields/Partner_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Income_Frequency__c</fullName>
    <label>Partner Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>