force-app/main/default/objects/Additional_Income__c/fields/Primary_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Income_Amount__c</fullName>
    <label>Primary Income Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>