force-app/main/default/objects/Additional_Income__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>