force-app/main/default/objects/Additional_Income__c/fields/Time_In_Current_Employment_Months__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Current_Employment_Months__c</fullName>
    <label>Time In Current Employment Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>